syntax = "proto3";

package v1;

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Greeter service"
    version: "v1"
  }
  schemes: HTTP
  consumes: "application/json"
  produces: "application/json"
};

service GreeterService {
  rpc Greet(GreetRequest) returns (GreetResponse) {
    option (google.api.http) = {
      get: "/api/v1/greet"
    };
  }
}

message GreetRequest {
}

message GreetResponse {
  string message = 1;
}